<resources>
    <string name="app_name">DC Tolosa</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <!-- VALUES FOR UI -->
    <string name="background">3f3c51</string>


    <!-- VALUES FOR INITIAL TESTS -->
    <string name="profileName">Anonyme</string>
    <string name="profileStreet">Votre Rue</string>
    <string name="profilePostal">31xxx</string>
    <string name="profileCity">Toulouse</string>
    <string name="profileMail">votre@mail.com</string>
    <string name="profileTel">06xxxxxxx</string>
    <string name="title_activity_maps">Map</string>

    <string name="edit1"> Entrez votre adresse de depart</string>
    <string name="edit2"> Entrez votre adresse destination </string>
    <string name="edit3"> Entrez votre heure de depart </string>
    <string name="edit4"> Entrez votre heure d arrive  </string>


</resources>
