<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c8ffffff"
    android:weightSum="1">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.27" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Départ"
        android:id="@+id/textView1"
        android:layout_weight="0.07"
        android:textStyle="italic"
        android:background="#c8ffffff"/>

    <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_depart"
        android:hint="@string/edit1"
        />

    <TextView
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Destination"
        android:id="@+id/textView2"
        android:layout_weight="0.04"
        android:textStyle="italic"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_destination"
        android:hint="@string/edit2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Heure de départ"
        android:id="@+id/textView3"
        android:layout_weight="0.07"
        android:textStyle="italic"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_Hdepart"
        android:hint="@string/edit3"/>

    <TextView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Heure d&apos;arrivé"
        android:id="@+id/textView4"
        android:layout_weight="0.09"
        android:textStyle="italic"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_Hdestination"
        android:hint="@string/edit4"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Valider"
        android:id="@+id/bt_button"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.27" />

</LinearLayout>