<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffe6ddce">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView"
        android:src="@drawable/background"
        android:background="@drawable/background" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#9aca61">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Mon profil"
            android:id="@+id/tVMonProfil"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="#ffffff" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@drawable/logo"
            android:layout_alignParentEnd="false"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true" />

        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00515100">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00ffffff"
            android:padding="10dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_alignParentStart="true">


        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:background="#37ffffff"
                android:paddingTop="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:layout_marginTop="2dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ib_profilePicture"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/profile"
                    android:background="#00ffffff" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/profileName"
                    android:ems="10"
                    android:id="@+id/et_profileName"
                    android:textSize="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/scrollView3"
                    android:layout_below="@+id/et_profileName"
                    android:layout_alignLeft="@+id/ib_profilePicture"
                    android:background="#1efffdfd"
                    android:layout_above="@+id/b_editProfile"
                    android:padding="10dp"
                    android:fillViewport="false">


                    <RelativeLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profileStreet"
                            android:id="@+id/et_profileRue"
                            android:layout_alignParentLeft="false"
                            android:layout_alignParentTop="false"
                            android:textColor="#000000"
                            android:layout_marginLeft="10dp"
                            android:textSize="18dp" />

                        <EditText
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/profilePostal"
                            android:id="@+id/et_profilePostal"
                            android:layout_alignParentLeft="false"
                            android:layout_alignParentTop="false"
                            android:textColor="#000000"
                            android:layout_below="@+id/et_profileRue"
                            android:layout_marginLeft="10dp"
                            android:textSize="18dp" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profileCity"
                            android:id="@+id/et_profileCity"
                            android:layout_alignParentLeft="false"
                            android:layout_alignParentTop="false"
                            android:textColor="#000000"
                            android:layout_below="@+id/et_profileRue"
                            android:layout_marginLeft="10dp"
                            android:layout_toRightOf="@+id/et_profilePostal"
                            android:textSize="18dp" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profileMail"
                            android:id="@+id/et_profileMail"
                            android:layout_alignParentLeft="false"
                            android:layout_alignParentTop="false"
                            android:textColor="#000000"
                            android:layout_marginLeft="10dp"
                            android:layout_below="@+id/et_profilePostal" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_profileTel"
                            android:text="@string/profileTel"
                            android:layout_alignParentLeft="false"
                            android:layout_alignParentTop="false"
                            android:textColor="#000000"
                            android:layout_marginLeft="10dp"
                            android:layout_below="@+id/et_profileMail" />

                    </RelativeLayout>
                </ScrollView>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Editer mon profil"
                    android:id="@+id/b_editProfile"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/edit"
                    android:background="#38ffffff" />


            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
</RelativeLayout>